--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -1,143 +1,143 @@
 {
-    "p0":"Личный кабинет",
-    "p1":"Корзина",
-    "p2":"Нефтепродукты",
-    "p3":"Главная",
-    "p4":"О компании",
-    "p5":"Поставщикам",
-    "p6":"Покупателям",
-    "p7":"Товары",
-    "p8":"Добро пожаловать на первую биржу по ГСМ в Узбекистане",
-    "p9":"Мы предлагаем моторные, трансмиссионные, гидравлические и компрессорные масла таких брендов как, Olympia, GNV, Лукойл, Teboil, Shell, Mobil и Hibaki. ",
-    "p10":"Подробнее",
-    "p11":"Новости",
-    "p12":"Новые товары",
-    "p13":"Показать все товары",
-    "p14":"Почему именно мы?",
-    "p15":"Помощь в поиске и подборе масел для автомобиля",
-    "p16":"Все самое нужное на одном месте",
-    "p17":"Реальные и конкурентоспособные цены",
-    "p18":"Широчайший ассортимент товаров",
-    "p19":"Страницы",
-    "p20":"Контакты",
-    "p21":"Мы в социальных сетях",
-    "p22":"Остались вопросы?",
-    "p23":"Напишите нам",
-    "p24":"Поиск...",
-    "p25":"Главная",
-    "p26":"О компании",
-    "p27":"Поставщикам",
-    "p28":"Покупателям",
-    "p29":"Магазин",
-    "p30":"Адрес: г. Ташкент, массив Себзор Ц17/18 дом 4, кв.137",
-    "p31":"Все новости",
-    "p32":"В корзину",
-    "p33":"Добро пожаловать на GAZOIL",
-    "p34":"Купить товар",
-    "p35":"Разместить товар",
-    "p36":"О компании",
-    "p37":"Развивайте бизнес и зарабатывайте вместе с нами",
-    "p38":"Получайте заказы от клиентов, привозите товар и получайте большe прибыли от онлайн продаж",
-    "p39":"Партнёрская сеть — это выгодно и просто!",
-    "p40":"GASOIL предоставляет магазинам и предпринимателям возможность получить полный комплекс услуг на одной площадке.",
-    "p41":"Выгодно",
-    "p42":"GAZOIL.UZ онлайн маркетплейс нефтяных продукций в Узбекистане",
-    "p43":"Для покупателей",
-    "p44":"GASOIL это огромный маркетплейс в интернете нефтяных продукций",
-    "p45":"Это уникальная база товаров и услуг от разных компаний, собранных в одном месте. С помощью нас вы сможете найти самый широкий ассортимент товаров и услуг и заказать их непосредственно на нашем сайте или на сайте поставщика.",
-    "p46":"Теперь Вам необязательно посещать разные сайты по отдельности, так как все товары и услуги доступны в каталоге нашего маркетплейса",
-    "p47":"Отображение всех товаров  в каталоге",
-    "p48":"Удаленный менеджер по обслуживанию",
-    "p49":"Бесплатная  техническая поддержка",
-    "p50":"Фильтр по параметрам",
-    "p51":"Цена",
-    "p52":"Тип продаж",
-    "p53":"Метки",
-    "p54":"Без метки",
-    "p55":"Новинка",
-    "p56":"Хит сезона",
-    "p57":"Хит продаж",
-    "p58":"Популярные",
-    "p59":"Применить фильтры",
-    "p60":"Сбросить фильтры",
-    "p61":"Вам не надо тратиться на маркетинг, искать различные источники трафика. Мы предоставим вам вышеперечисленные услуги и гарантирукм.",
-    "p62":"Благодаря нативности инструментов средний CTR на площадках наших партнёров — 9%. В некоторых случаях этот показатель достигает",
-    "p63":"Вам не надо создавать свой собственный интернет-магазин для онлайн продаж",
-    "p64":"Быстро",
-    "p65":"Быстрая загрузка товара на сайт GAZOIL.UZ",
-    "p66":"Удобно",
-    "p67":"Получайте заказ от клиента и привозите нам заказанный товар в удобный временной диапазон",
-    "p68":"Продвигайте товары",
-    "p69":"С помощью продвижения ставками вы можете показывать товары бренда и предложения магазинов-партнёров на более выгодных позициях в результатах поиска, товарной карточке и на страницах категорий",
-    "p70":"Один шаг до управления брендом на GAZOIL.UZ",
-    "p71":"Один шаг до управления брендом на сайте, чтобы получить доступ к кабинету производителя, заполните анкету и наши менеджеры свяжутся с вами!",
-    "p72":"GAZOIL.UZ - это первый в Узбекистане маркетплейс нефтяных продукций, где вы можете легко размещать свои товары и управлять ими. С нами вы можете легко надохить покупателей в онлайн! Продвигайте свои товары вместе с нами",
-    "p73":"Вам всего лишь нужно зарегистрироваться в партнерской программе, заполните необходимые формы и наши менеджеры свяжутся с вами в ближайшее время. После получения доступа к партнерский кабинет вы можете добавлять свои товары на нашей площадке и мониторинг будет максимально удобно.",
-    "p74":"Интернет-магазины сейчас быстро развиваются и мы создаем удобства для производителей и покупателей. Размещаяя свои товары на нашей площадке вы делаете жизнь покупателей легче и лучше, с нами мы можете увеличить свои продажи.",
-    "p75":"Мы помогаем производителям быстро и без лишниз затрат выходить на онлайн рынок, вам не нужно создавать веб-сайт, тратиться на продвижение своего сайта колосальные деньги, мы сделаем это за вас.",
-    "p76":"Основными задачами Портала являются:",
-    "p77":"предоставление возможности реализации и приобретения готовой продукции, комплектующих изделий, сырья и материалов, производимых отечественными промышленными предприятиями через оналйн площадки",
-    "p78":"внедрение механизма обеспечения свободы отношений и прозрачности заключения договоров и платежей между хозяйствующими субъектами, а также заказчиками и поставщиками;",
-    "p79":"информирование всех заинтересованных кругов о видах, технических характеристиках и параметрах качества производимой в республике промышленной продукции;",
-    "p80":"обеспечение обмена информацией между производителями и покупателями",
-    "p81":"Портал выполняет следующие функции:",
-    "p82":"выполняет операторские функции, координирует и контролирует общую деятельность Портала;",
-    "p83":"ведет интегрированную деятельность с информационными системами и базами данных  статистики,  финансов и других;",
-    "p84":"публикация на Портале о видах и объемах импортной и экспортноориентированной продукции, а также размещения перечня востребованных в экономике и рекомендованных к освоению импортозамещающих продукций;",
-    "p85":"обеспечение размещения правильной и реальной информации о промышленной продукции,  своевременного обновления данной информации и контроля за ним.",
-    "p86":" Масла",
-    "p87":"Топливо",
-    "p88":"Смазки",
-    "p89":"Тип продаж",
-    "p90":"Ф.И.О.",
-    "p91":"Номер телефона",
-    "p92":"Опишите проблему или вопрос",
-    "p93":"Отправить",
-    "Личные данные":"Личные данные",
-    "Заказы":"Заказы",
-    "Выйти":"Выйти",
-    "Ф.И.О":"Ф.И.О",
-    "Номер телефона":"Номер телефона",
-    "ИНН":"ИНН",
-    "Организация":"Организация",
-    "Логин":"Логин",
-    "Цена":"Цена",
-    "Количество":"Количество",
-    "Личные данные о кампании":"Личные данные о кампании",
-    "Полное наименование":"Полное наименование",
-    "Юридическое название":"Юридическое название",
-    "Юридический адрес":"Юридический адрес",
-    "Генеральный директор":"Генеральный директор",
-    "Наименование банка":"Наименование банка",
-    "МФО":"МФО",
-    "Адрес компании":"Адрес компании",
-    "Расчетный счет":"Расчетный счет",
-    "Изменить":"Изменить",
-    "Изменение данных":"Изменение данных",
-    "Сохранить":"Сохранить",
-    "Главная страница":"Главная страница",
-    "Добавить товар":"Добавить товар",
-    "Фотографии":"Фотографии",
-    "Название":"Название",
-    "Артикул":"Артикул",
-    "Описание":"Описание",
-    "Категории":"Категории",
-    "Статус товара":"Статус товара",
-    "Доступен в каталоге":"Доступен в каталоге",
-    "Наличие на складе":"Наличие на складе",
-    "В наличии":"В наличии",
-    "Товары":"Товары",
-    "Доставка":"Доставка",
-    "Регистрация":"Регистрация",
-    "Покупатель":"Покупатель",
-    "Поставщик":"Поставщик",
-    "Наименование организации":"Наименование организации",
-    "Пароль":"Пароль",
-    "Регистрироваться":"Регистрироваться",
-    "Вход":"Вход",
-    "Войти":"Войти",
-    "Зарегистрироваться":"Зарегистрироваться",
-    "Восстановить пароль":"Восстановить пароль",
-    "Введите номер телефона":"Введите номер телефона",
-    "Получить код":"Получить код"
+	"p0": "Личный кабинет",
+	"p1": "Корзина",
+	"p2": "Каталог",
+	"p3": "Главная",
+	"p4": "О компании",
+	"p5": "Поставщикам",
+	"p6": "Покупателям",
+	"p7": "Товары",
+	"p8": "Добро пожаловать на первую биржу по ГСМ в Узбекистане",
+	"p9": "Мы предлагаем моторные, трансмиссионные, гидравлические и компрессорные масла таких брендов как, Olympia, GNV, Лукойл, Teboil, Shell, Mobil и Hibaki. ",
+	"p10": "Подробнее",
+	"p11": "Новости",
+	"p12": "Новые товары",
+	"p13": "Показать все товары",
+	"p14": "Почему именно мы?",
+	"p15": "Помощь в поиске и подборе масел для автомобиля",
+	"p16": "Все самое нужное на одном месте",
+	"p17": "Реальные и конкурентоспособные цены",
+	"p18": "Широчайший ассортимент товаров",
+	"p19": "Страницы",
+	"p20": "Контакты",
+	"p21": "Мы в социальных сетях",
+	"p22": "Остались вопросы?",
+	"p23": "Напишите нам",
+	"p24": "Поиск...",
+	"p25": "Главная",
+	"p26": "О компании",
+	"p27": "Поставщикам",
+	"p28": "Покупателям",
+	"p29": "Магазин",
+	"p30": "Адрес: г. Ташкент, массив Себзор Ц17/18 дом 4, кв.137",
+	"p31": "Все новости",
+	"p32": "В корзину",
+	"p33": "Добро пожаловать на GAZOIL",
+	"p34": "Купить товар",
+	"p35": "Разместить товар",
+	"p36": "О компании",
+	"p37": "Развивайте бизнес и зарабатывайте вместе с нами",
+	"p38": "Получайте заказы от клиентов, привозите товар и получайте большe прибыли от онлайн продаж",
+	"p39": "Партнёрская сеть — это выгодно и просто!",
+	"p40": "GASOIL предоставляет магазинам и предпринимателям возможность получить полный комплекс услуг на одной площадке.",
+	"p41": "Выгодно",
+	"p42": "GAZOIL.UZ онлайн маркетплейс нефтяных продукций в Узбекистане",
+	"p43": "Для покупателей",
+	"p44": "GASOIL это огромный маркетплейс в интернете нефтяных продукций",
+	"p45": "Это уникальная база товаров и услуг от разных компаний, собранных в одном месте. С помощью нас вы сможете найти самый широкий ассортимент товаров и услуг и заказать их непосредственно на нашем сайте или на сайте поставщика.",
+	"p46": "Теперь Вам необязательно посещать разные сайты по отдельности, так как все товары и услуги доступны в каталоге нашего маркетплейса",
+	"p47": "Отображение всех товаров  в каталоге",
+	"p48": "Удаленный менеджер по обслуживанию",
+	"p49": "Бесплатная  техническая поддержка",
+	"p50": "Фильтр по параметрам",
+	"p51": "Цена",
+	"p52": "Тип продаж",
+	"p53": "Метки",
+	"p54": "Без метки",
+	"p55": "Новинка",
+	"p56": "Хит сезона",
+	"p57": "Хит продаж",
+	"p58": "Популярные",
+	"p59": "Применить фильтры",
+	"p60": "Сбросить фильтры",
+	"p61": "Вам не надо тратиться на маркетинг, искать различные источники трафика. Мы предоставим вам вышеперечисленные услуги и гарантирукм.",
+	"p62": "Благодаря нативности инструментов средний CTR на площадках наших партнёров — 9%. В некоторых случаях этот показатель достигает",
+	"p63": "Вам не надо создавать свой собственный интернет-магазин для онлайн продаж",
+	"p64": "Быстро",
+	"p65": "Быстрая загрузка товара на сайт GAZOIL.UZ",
+	"p66": "Удобно",
+	"p67": "Получайте заказ от клиента и привозите нам заказанный товар в удобный временной диапазон",
+	"p68": "Продвигайте товары",
+	"p69": "С помощью продвижения ставками вы можете показывать товары бренда и предложения магазинов-партнёров на более выгодных позициях в результатах поиска, товарной карточке и на страницах категорий",
+	"p70": "Один шаг до управления брендом на GAZOIL.UZ",
+	"p71": "Один шаг до управления брендом на сайте, чтобы получить доступ к кабинету производителя, заполните анкету и наши менеджеры свяжутся с вами!",
+	"p72": "GAZOIL.UZ - это первый в Узбекистане маркетплейс нефтяных продукций, где вы можете легко размещать свои товары и управлять ими. С нами вы можете легко надохить покупателей в онлайн! Продвигайте свои товары вместе с нами",
+	"p73": "Вам всего лишь нужно зарегистрироваться в партнерской программе, заполните необходимые формы и наши менеджеры свяжутся с вами в ближайшее время. После получения доступа к партнерский кабинет вы можете добавлять свои товары на нашей площадке и мониторинг будет максимально удобно.",
+	"p74": "Интернет-магазины сейчас быстро развиваются и мы создаем удобства для производителей и покупателей. Размещаяя свои товары на нашей площадке вы делаете жизнь покупателей легче и лучше, с нами мы можете увеличить свои продажи.",
+	"p75": "Мы помогаем производителям быстро и без лишниз затрат выходить на онлайн рынок, вам не нужно создавать веб-сайт, тратиться на продвижение своего сайта колосальные деньги, мы сделаем это за вас.",
+	"p76": "Основными задачами Портала являются:",
+	"p77": "предоставление возможности реализации и приобретения готовой продукции, комплектующих изделий, сырья и материалов, производимых отечественными промышленными предприятиями через оналйн площадки",
+	"p78": "внедрение механизма обеспечения свободы отношений и прозрачности заключения договоров и платежей между хозяйствующими субъектами, а также заказчиками и поставщиками;",
+	"p79": "информирование всех заинтересованных кругов о видах, технических характеристиках и параметрах качества производимой в республике промышленной продукции;",
+	"p80": "обеспечение обмена информацией между производителями и покупателями",
+	"p81": "Портал выполняет следующие функции:",
+	"p82": "выполняет операторские функции, координирует и контролирует общую деятельность Портала;",
+	"p83": "ведет интегрированную деятельность с информационными системами и базами данных  статистики,  финансов и других;",
+	"p84": "публикация на Портале о видах и объемах импортной и экспортноориентированной продукции, а также размещения перечня востребованных в экономике и рекомендованных к освоению импортозамещающих продукций;",
+	"p85": "обеспечение размещения правильной и реальной информации о промышленной продукции,  своевременного обновления данной информации и контроля за ним.",
+	"p86": " Масла",
+	"p87": "Топливо",
+	"p88": "Смазки",
+	"p89": "Тип продаж",
+	"p90": "Ф.И.О.",
+	"p91": "Номер телефона",
+	"p92": "Опишите проблему или вопрос",
+	"p93": "Отправить",
+	"Личные данные": "Личные данные",
+	"Заказы": "Заказы",
+	"Выйти": "Выйти",
+	"Ф.И.О": "Ф.И.О",
+	"Номер телефона": "Номер телефона",
+	"ИНН": "ИНН",
+	"Организация": "Организация",
+	"Логин": "Логин",
+	"Цена": "Цена",
+	"Количество": "Количество",
+	"Личные данные о кампании": "Личные данные о кампании",
+	"Полное наименование": "Полное наименование",
+	"Юридическое название": "Юридическое название",
+	"Юридический адрес": "Юридический адрес",
+	"Генеральный директор": "Генеральный директор",
+	"Наименование банка": "Наименование банка",
+	"МФО": "МФО",
+	"Адрес компании": "Адрес компании",
+	"Расчетный счет": "Расчетный счет",
+	"Изменить": "Изменить",
+	"Изменение данных": "Изменение данных",
+	"Сохранить": "Сохранить",
+	"Главная страница": "Главная страница",
+	"Добавить товар": "Добавить товар",
+	"Фотографии": "Фотографии",
+	"Название": "Название",
+	"Артикул": "Артикул",
+	"Описание": "Описание",
+	"Категории": "Категории",
+	"Статус товара": "Статус товара",
+	"Доступен в каталоге": "Доступен в каталоге",
+	"Наличие на складе": "Наличие на складе",
+	"В наличии": "В наличии",
+	"Товары": "Товары",
+	"Доставка": "Доставка",
+	"Регистрация": "Регистрация",
+	"Покупатель": "Покупатель",
+	"Поставщик": "Поставщик",
+	"Наименование организации": "Наименование организации",
+	"Пароль": "Пароль",
+	"Регистрироваться": "Регистрироваться",
+	"Вход": "Вход",
+	"Войти": "Войти",
+	"Зарегистрироваться": "Зарегистрироваться",
+	"Восстановить пароль": "Восстановить пароль",
+	"Введите номер телефона": "Введите номер телефона",
+	"Получить код": "Получить код"
 }
